# arkan

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTORS.txt  NOTICE.md  README.md  WORKSPACE  build.sh
android/src/java/com/kleinstein/arkan/: Greeting.java
include/: arkan.hpp
lib/: greeting.cpp
lib/android/: BUILD  Manifest.xml
lib/android/java/com/kleinstein/arkan/: Greeting.java
lib/android/src/cpp/: arkan.cpp
lib/cpp/: BUILD
lib/cpp/include/: arkan.hpp
lib/include/cpp/: arkan.hpp
samples/gtkmm/: greeting.cpp
samples/wxwidgets/: greeting.cpp
src/: BUILD  greeting.hpp
toolchains/: x86_64_linux_gnu.toolchain.cmake  x86_64_windows_gnu.toolchain.cmake
wrappers/android/: settings.gradle
wrappers/android/app/: build.gradle
wrappers/android/app/src/androidTest/java/com/kleinstein/arkan/sample/: ExampleInstrumentedTest.java
wrappers/android/app/src/main/: AndroidManifest.xml
wrappers/android/app/src/main/java/com/kleinstein/arkan/sample/: FirstFragment.java  MainActivity.java  SecondFragment.java
wrappers/android/app/src/main/res/layout/: activity_main.xml
wrappers/android/app/src/main/res/menu/: menu_main.xml
wrappers/android/app/src/main/res/navigation/: nav_graph.xml
wrappers/android/app/src/main/res/values/: strings.xml  themes.xml
wrappers/android/app/src/main/res/values-night/: themes.xml
wrappers/android/app/src/test/java/com/kleinstein/arkan/sample/: ExampleUnitTest.java
wrappers/android/arkan/: build.gradle
wrappers/android/arkan/src/androidTest/java/com/kleinstein/arkan/: ExampleInstrumentedTest.java
wrappers/android/arkan/src/main/: AndroidManifest.xml
wrappers/android/arkan/src/main/cpp/: CMakeLists.txt  main.cpp
wrappers/android/arkan/src/main/java/com/kleinstein/arkan/: Greeting.java
wrappers/android/arkan/src/test/java/com/kleinstein/arkan/: ExampleUnitTest.java
wrappers/android/gradle/wrapper/: gradle-wrapper.properties
wrappers/ios/: CMakeLists.txt  Package.swift  README.md
wrappers/ios/App/App.xcodeproj/: project.pbxproj
wrappers/ios/App/App.xcodeproj/project.xcworkspace/xcuserdata/denis.xcuserdatad/: UserInterfaceState.xcuserstate
wrappers/ios/App/App.xcodeproj/xcuserdata/denis.xcuserdatad/xcschemes/: xcschememanagement.plist
wrappers/ios/App/App.xcworkspace/xcuserdata/denis.xcuserdatad/: UserInterfaceState.xcuserstate
wrappers/ios/App/Arkan.swiftmodule/: arm64.swiftdoc  arm64.swiftmodule  x86_64.swiftdoc  x86_64.swiftmodule
wrappers/ios/App/Shared/: AppApp.swift  ContentView.swift
wrappers/ios/App/Tests iOS/: Tests_iOS.swift  Tests_iOSLaunchTests.swift
wrappers/ios/App/Tests macOS/: Tests_macOS.swift  Tests_macOSLaunchTests.swift
wrappers/ios/Arkan/: CMakeLists.txt  Package.swift
wrappers/ios/Arkan/Sources/: Arkan.mm  Arkan.swift  ArkanObjC-Bridging-Header.h  CMakeLists.txt
wrappers/ios/Arkan/Sources/ObjC/: Arkan.mm  CMakeLists.txt
wrappers/ios/Arkan/Sources/ObjC/inlcude/: Arkan.h
wrappers/ios/Arkan/Sources/Swift/: Arkan.swift  CMakeLists.txt
wrappers/ios/Sources/Swift/: Arkan.swift
wrappers/ios/Tests/ArkanTests/: ArkanTests.swift
